[project]
name = "comfyui_ws"
description = "Nodes: SDXLResolutionPresets. Easy access to the officially supported resolutions, in both horizontal and vertical formats: 1024x1024, 1152x896, 1216x832, 1344x768, 1536x640"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/wsippel/comfyui_ws"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_ws"
Icon = ""
